--- a/backend/src/main/resources/config/secure.properties
+++ b/backend/src/main/resources/config/secure.properties
@@ -3,13 +3,14 @@
 #
 #
 # System Info
-application.name=@project.artifactId@
+application.name=Game-Radar
 application.version=@project.version@
 # API
 server.servlet.context-path=/
+management.endpoints.web.exposure.include=*
 # Server
 server.error.include-stacktrace=never
-# spring.mvc.static-path-pattern=/resources/public/** <- Disabled because of swagger-ui
 # Jackson JSON Mapping
 spring.jackson.default-property-inclusion=non_null
 spring.jackson.mapper.accept-case-insensitive-enums=true
+spring.jackson.deserialization.fail-on-unknown-properties=false
