--- a/backend/src/main/resources/config/database.properties
+++ b/backend/src/main/resources/config/database.properties
@@ -9,3 +9,4 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.jpa.open-in-view=true
