--- a/backend/src/main/resources/config/secure.properties
+++ b/backend/src/main/resources/config/secure.properties
@@ -7,7 +7,9 @@ application.name=Game-Radar
 application.version=@project.version@
 # API
 server.servlet.context-path=/
-management.endpoints.web.exposure.include=*
+# Spring Actuator
+management.endpoints.enabled-by-default=false
+management.endpoint.health.enabled=true
 # Server
 server.error.include-stacktrace=never
 # Jackson JSON Mapping
