Imported more frontend code from ACC Server Manager Fixed all compiler errors

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -27,6 +27,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/app/theme/default-theme.scss",
               "src/styles.css"
             ],
             "scripts": []
