--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "version": "0.0.0",
+  "version": "0.0.1-ALPHA",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,13 +11,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.1",
+    "@angular/cdk": "^12.2.1",
     "@angular/common": "~12.2.1",
     "@angular/compiler": "~12.2.1",
     "@angular/core": "~12.2.1",
+    "@angular/flex-layout": "^12.0.0-beta.34",
     "@angular/forms": "~12.2.1",
+    "@angular/material": "^12.2.1",
     "@angular/platform-browser": "~12.2.1",
     "@angular/platform-browser-dynamic": "~12.2.1",
     "@angular/router": "~12.2.1",
+    "@auth0/angular-jwt": "^5.0.2",
+    "mat-progress-buttons": "^9.2.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
