--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -26,6 +26,8 @@
         <auth0.java-jwt.version>3.16.0</auth0.java-jwt.version>
         <springfox.version>3.0.0</springfox.version>
         <owasp.encoder.version>1.2.3</owasp.encoder.version>
+        <frontend-maven-plugin.version>1.12.0</frontend-maven-plugin.version>
+        <frontend-maven-plugin.node-version>v14.17.5</frontend-maven-plugin.node-version>
     </properties>
 
     <dependencies>
@@ -183,6 +185,7 @@
                 <configuration>
                     <mainClass>de.grimsi.gameradar.backend.GameRadar</mainClass>
                     <layout>ZIP</layout>
+                    <finalName>game-radar</finalName>
                 </configuration>
                 <executions>
                     <execution>
@@ -211,9 +214,9 @@
             <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
-                <version>1.12.0</version>
+                <version>${frontend-maven-plugin.version}</version>
                 <configuration>
-                    <nodeVersion>v14.17.1</nodeVersion>
+                    <nodeVersion>${frontend-maven-plugin.node-version}</nodeVersion>
                     <workingDirectory>../frontend</workingDirectory>
                     <installDirectory>target</installDirectory>
                 </configuration>
