--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~12.2.1",
     "@angular/router": "~12.2.1",
     "@auth0/angular-jwt": "^5.0.2",
+    "iso8601-duration": "^1.3.0",
     "mat-progress-buttons": "^9.2.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
